@@ -411,6 +411,7 @@ void ObjectMoleculeGetAtomSeleLog(ObjectMolecule * I, int index, char *buffer, i
 int ObjectMoleculeMultiSave(ObjectMolecule * I, char *fname, FILE * f, int state,
                             int append, int format, int quiet);
 
+void ObjectMoleculeResetIDNumbers(ObjectMolecule * I);
 void ObjectMoleculeUpdateIDNumbers(ObjectMolecule * I);
 
 void ObjectMoleculeSculptImprint(ObjectMolecule * I, int state, int match_state,
